# django-log-panel

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/scripts/: check_version_bump.py
.github/workflows/: ci.yml  docs.yml  release.yml  version-check.yml
advanced/: index.html
backends/: index.html
configuration/: index.html
development/: index.html
docs/: advanced.md  backends.md  configuration.md  development.md  gen_ref_pages.py  index.md
log_panel/: admin.py  alerts.py  apps.py  bootstrap.py  conf.py  datetimes.py  filters.py  managers.py  models.py  querysets.py  routers.py  signals.py  types.py
log_panel/backends/: base.py  mongodb.py  sql.py
log_panel/exceptions/: __init__.py  mongodb.py
log_panel/handlers/: __init__.py  mongodb.py  sql.py
log_panel/management/commands/: delete_old_logs.py  rebuild_log_cards.py
log_panel/migrations/: 0001_initial.py  0002_log_message_chunked_log_message_size_logmessagechunk.py  0002_rename_panel_log_alter_log_options_and_more.py  0003_alter_log_id.py  0003_logger_logcard_logtimelinebucket.py  0004_alter_logtimelinebucket_unit.py
reference/SUMMARY/: index.html
reference/log_panel/: index.html
reference/log_panel/admin/: index.html
reference/log_panel/alerts/: index.html
reference/log_panel/apps/: index.html
reference/log_panel/backends/: index.html
reference/log_panel/bootstrap/: index.html
reference/log_panel/conf/: index.html
reference/log_panel/datetimes/: index.html
reference/log_panel/filters/: index.html
reference/log_panel/handlers/: index.html
reference/log_panel/managers/: index.html
reference/log_panel/models/: index.html
reference/log_panel/querysets/: index.html
reference/log_panel/routers/: index.html
reference/log_panel/signals/: index.html
reference/log_panel/types/: index.html
search/: search_index.json
tests/: conftest.py  helpers.py  settings.py  test_admin.py  test_bootstrap.py  test_buffered_handler.py  test_conf.py  test_datetimes.py  test_delete_old_logs.py  test_handlers.py  test_managers.py  test_mongodb_backend.py  test_querysets.py  test_rebuild_log_cards.py  test_routers.py  test_sql_backend.py  test_types.py
(+20 files in other folders)
